@@ -2,5 +2,6 @@ PLUGIN_DIR='@PLUGINDIR@'
 GLADE_DIR='@GLADEDIR@'
 PYTHON_DIR='@PYTHONDIR@'
 PKG_DATA_DIR='@PKGDATADIR@'
+PIXMAP_DIR='@PIXMAPDIR@'
 
 GARMON_VERSION='@GARMON_VERSION@'
